# data-projects-lab

./: .gitattributes  .gitignore  GUIA_MCP_SIMPLE.md  README.md  main.py  pyproject.toml
data_projects_lab/: __init__.py
mlruns/0/: meta.yaml
projects/clasificador-meli/: DICCIONARIO_DATOS.md  GUIA_LECTURA.md  README.md  problema-a-resolver.md  test_logging.py  train.py
projects/clasificador-meli/models/: best_xgb_config.json
projects/clasificador-meli/src/config/: __init__.py  config.py
projects/clasificador-meli/src/data/processed/: data_model.parquet
projects/clasificador-meli/src/features/: preprocessing.py
projects/clasificador-meli/src/models/: train_model.py  xgb_model.py
projects/clasificador-meli/src/notebooks/: model_xgboost.ipynb  preprocessing_eda.ipynb
projects/clasificador-meli/src/utils/: __init__.py  logger.py  utils.py
projects/clasificador-meli/test_data/: README.md  single_product_example.json  test_products.json  test_products.jsonlines  test_products_complete.csv  test_products_processed.parquet  test_products_simple.csv
projects/clasificador-meli/ui/: streamlit_app.py
projects/prediccion-precios-automoviles/: .gitignore  .mlflowrc  QUICKSTART.md  README.md  TROUBLESHOOTING.md  app_fastapi.py  app_gradio.py  app_gradio2.py  start_mlflow.sh  test_setup.py  train_all_models.py  train_quick.py
projects/prediccion-precios-automoviles/data/: README.md
projects/prediccion-precios-automoviles/data/raw/: automoviles_usados.csv  automoviles_usados.parquet
projects/prediccion-precios-automoviles/examples/: README.md  api_requests.http  curl_examples.sh  test_api.py
projects/prediccion-precios-automoviles/mlruns/: .gitkeep
projects/prediccion-precios-automoviles/models/: knn_metadata.json  lightgbm_metadata.json  linear_regression_metadata.json  model_metadata.json  random_forest_deep_metadata.json  random_forest_metadata.json
projects/prediccion-precios-automoviles/notebooks/: 02_training.ipynb
projects/prediccion-precios-automoviles/src/: __init__.py  config.py  predict.py  preprocessing.py  training.py
projects/promociones_usuarios/: 01_reto_promociones_usuarios.ipynb  generador_datos.py
projects/temporal-split/: README.md  data_leakage_temporal.ipynb
projects/threholds-example/: README.md  umbral_clasificacion.ipynb
projects/titanic/: 01_descarga_datos.ipynb  02_ajuste_datos.ipynb  04_AutoML_PyCaret.ipynb  05_AutoML_FLAML.ipynb  06_entrenamiento_modelo.ipynb
projects/titanic/datos/: 01_datos_crudos_titanic.parquet  02_datos_con_tipo_de_dato_ajustado_titanic.parquet
tutorials/: 01-configuracion-inicial-claude-code.md  02-configuracion-proyecto-uv.md  03-tecnicas-preprocesamiento.md  04-algoritmos-de-clasificacion.md  06-interpretabilidad-modelos-ml.md  06-validacion-y-optimizacion-hiperparametros.md  10-recursos-herramientas-ia.md  metricas_ml_regresion_vs_clasificacion.md  mlflow_y_fastapi_para_principiantes.md
