[project]
name = "data-projects-lab"
version = "0.1.0"
description = "Educational notebooks with tutorials, projects, and examples for Artificial Intelligence and Analytics specialization"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
    { name = "David Palacio Jiménez", email = "david.palacio@example.com" }
]
keywords = [
    "machine-learning",
    "data-science",
    "education",
    "jupyter-notebooks",
    "artificial-intelligence",
    "analytics",
    "automl",
    "tutorials"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: Jupyter",
]

dependencies = [
    "flaml[automl]>=2.3.6",
    "ipykernel>=7.0.1",
    "matplotlib>=3.7.5",
    "nbconvert>=7.16.6",
    "pandas>=2.1.0,<2.2.0",
    "path>=17.1.1",
    "plotly>=5.5.0,<6.0.0",
    "pyarrow>=21.0.0",
    "pycaret>=3.3.0",
    "scikit-learn>=1.3.0,<1.6.0",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
]

[project.optional-dependencies]
# Dependencias para desarrollo y testing
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

# Dependencias para interpretabilidad de modelos
interpretability = [
    "shap>=0.43.0",
    "lime>=0.2.0",
]

# Dependencias para experimentación avanzada
experiment = [
    "optuna>=3.4.0",
    "mlflow>=2.8.0",
    "wandb>=0.16.0",
]

# Todas las dependencias opcionales
all = [
    "data-projects-lab[dev,interpretability,experiment]",
]

[project.urls]
Homepage = "https://github.com/davidpalacio/data-projects-lab"
Repository = "https://github.com/davidpalacio/data-projects-lab"
Issues = "https://github.com/davidpalacio/data-projects-lab/issues"
Documentation = "https://github.com/davidpalacio/data-projects-lab#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=. --cov-report=term-missing"
