[project]
name = "data-projects-lab"
version = "0.1.0"
description = "Repositorio educativo con proyectos de Data Science y Machine Learning"
authors = [
    {name = "David Palacio Jiménez", email = "davidpalacioj@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

# Dependencias base (comunes a todos los proyectos)
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0,<1.6.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "ipykernel>=7.0.1",
    "nbconvert>=7.16.6",
    "pyarrow>=14.0.0",
    "xgboost>=1.5.0",
    "scipy>=1.5.0",
    "joblib>=1.0.0",
    "optuna>=3.0.0",
    "streamlit>=1.50.0",
    "plotly>=5.0.0",
    "pydantic>=1.8.0",
]

[project.optional-dependencies]
# Proyecto Titanic
titanic = [
    "flaml[automl]>=2.3.6",
    "streamlit>=1.50.0",
    "plotly>=5.5.0",
    "pyarrow>=21.0.0",
]

# Proyecto Clasificador Meli
meli = [
    "xgboost>=1.5.0",
    "pydantic>=1.8.0",
    "joblib>=1.0.0",
    "scipy>=1.5.0",
    "streamlit>=1.50.0",
    "plotly>=5.0.0",
]

# Interpretabilidad de modelos
interpretability = [
    "shap>=0.45.0",
    "lime>=0.2.0",
]

# Optimización de hiperparámetros
optimization = [
    "optuna>=3.0.0",
]

# Experimentación y tracking
experiment = [
    "mlflow>=2.0.0",
    "wandb>=0.15.0",
]

# Desarrollo y testing
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# Instalar todo
all = [
    "data-projects-lab[titanic,meli,interpretability,optimization,experiment,dev]",
]

[project.urls]
Homepage = "https://github.com/dpalacioj/data-projects-lab"
Repository = "https://github.com/dpalacioj/data-projects-lab"
Issues = "https://github.com/dpalacioj/data-projects-lab/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
dev-dependencies = [
    "ipython>=8.0.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
